2008-08-13  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/exception.cc:
	* cairomm/exception.h: renamed get_status() to get_status_code() to make the
	name a little bit more clear

2008-08-09  Armin Burgmeier  <armin@arbur.net>

	* MSVC_Net2005/cairomm/cairomm.rc.in: Removed #include "resource.h"
	since there is no resource.h, and it works well without that include.

	* MSVC_Net2005/cairomm/Makefile.am: Copy cairommconfig.h from
	cairomm/, so it is available to the visual studio project.

	* MSVC_Net2005/cairomm/cairomm.vcproj: Added
	cairomm/context_surface_win32.cc to the project.

	* Makefile.am:
	* configure.in: Adapt build files.

2008-08-09  Armin Burgmeier  <armin@arbur.net>

	* cairomm/context_surface_xlib.cc: Check for CAIRO_HAS_XLIB_SURFACE
	instead of CAIRO_HAS_WIN32_SURFACE.

2008-08-07  Murray Cumming  <murrayc@murrayc.com>

	* MSVC/: Renamed to MSVC_Net2008, ready to be patched by Armin 
	or Cedric.

2008-04-25  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/context.h: removed extra unused function declarations

2008-04-25  Benjamin Reed <rangerrick@befunk.com>

	* cairomm/Makefile.am, cairomm/context.cc, cairomm/context.h,
	cairomm/context_private.h, cairomm/context_surface_quartz.cc,
	cairomm/context_surface_xlib.h, cairomm/context_surface_win32.cc: separate
	calls to possibly-conflicting platform surface constructors.  Bug #15712

== 1.6.0 ==

2008-04-11  Jonathon Jongsma  <jjongsma@gnome.org>

	* NEWS:
	* configure.in: update for 1.6.0 release

2008-04-11  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/surface.cc:
	* cairomm/surface.h: wrap cairo_format_stride_for_width() as a static
	function in Cairo::ImageSurface

2008-04-11  Murray Cumming  <murrayc@murrayc.com>

	* Add autoheader to autogen.sh, to create cairommconfig.h.in, to fix 
	the build for me.

2008-03-23  Murray Cumming  <murrayc@murrayc.com>

	* cairomm/enums.h (FONT_TYPE_ATSUI, FONT_TYPE_QUARTZ):
	Change the definition of FONT_TYPE_ATSUI from CAIRO_FONT_TYPE_ATSUI to 